--- a/coreg.html
+++ b/coreg.html
@@ -127,7 +127,7 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="banner-left text-center pb-lg-5 p-md-0">
               <div class="banner-image">
-                <img src="images/team/4.png" alt="banner-image" class="w-50"><br>
+                <img src="images/coreg.png" alt="banner-image" class="w-100"><br>
               </div>
             </div>
           </div>
@@ -159,10 +159,10 @@
                 <div class="banner-button">
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
-                      <a class="btn btn2 my-1 w-100" href="offerwall.html">VIEW SCHEDULE</a>
+                      <a class="btn btn2 my-1 w-100" href="offerwall.html">No, I’ll Wait Longer</a>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                      <a class="btn me-3 my-1 w-100" href="offerwall.html">PURCHASE TICKET</a>
+                      <a class="btn me-3 my-1 w-100" href="offerwall.html">Yes, I Want Faster Payouts</a>
                     </div> 
                   </div>
                 </div>
