--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="banner-left text-center pb-lg-5 p-md-0">
               <div class="banner-image">
-                <img src="images/team/4.png" alt="banner-image" class="w-50"><br>
+                <img src="images/hero-img.webp" alt="banner-image" class="w-100"><br>
               </div>
               <div class="countdown">
   <div 
@@ -218,14 +218,14 @@
         </div>
       </div>
     </div>
-    <div class="wave overflow-hidden position-absolute w-100 z-0">
+    <!-- <div class="wave overflow-hidden position-absolute w-100 z-0">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none"
         class="d-block position-relative">
         <path class="elementor-shape-fill" d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3
           c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3
           c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"></path>
       </svg>
-    </div>
+    </div> -->
   </section>
   <!--Banner Section end-->
 
@@ -280,16 +280,16 @@
                 <div class="col-lg-6 col-md-6 p-0 ">
                   <div class="container-img-left mb-2">
                     <div class="img-left-1 float-end w-lg-80">
-                      <img class="mb-2 w-100 rounded" src="images/group/1.jpg" alt="group-image">
+                      <img class="mb-2 w-100 rounded" src="images/img_sec1-1.jpg" alt="group-image">
                     </div>
                     <div class="img-left-2">
-                      <img src="images/group/2.jpg" alt="group-image" class="w-100 rounded">
+                      <img src="images/img_sec1-2.jpg" alt="group-image" class="w-100 rounded">
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="container-img-right w-lg-75">
-                    <img src="images/group/3.jpg" alt="group-image" class="w-100 rounded">
+                    <img src="images/img_sec1-3.jpg" alt="group-image" class="w-100 rounded">
                   </div>
                 </div>
               </div>
@@ -307,10 +307,10 @@
       <div class="partner-inner">
         <div class="partner-title text-center pb-6 w-lg-60 m-auto">
           <p class="mb-1 pink">REWARDS FOR YOU</p>
-          <h2 class="mb-1">Win These  <span class="pink">Products</span></h2>
+          <h2 class="mb-1">Win Actual  <span class="pink">Products</span></h2>
           <p class="m-0"></p>Every sweepstake comes with exciting rewards designed just for you! From the latest gadgets to luxury items and lifestyle essentials – here’s a sneak peek at what you could take home. Enter now and make these prizes yours</p>
         </div>
-        <div class="partner-img pb-6">
+        <!-- <div class="partner-img pb-6">
           <div class="row row-cols-1 row-cols-lg-5 row-cols-md-5 ">
             <div class="col p-0 border-end border-sm-0">
               <div class="p-2 partner-img-box text-center">
@@ -363,7 +363,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="partner-button text-center">
           <a class="btn" href="prereg.html">View More Prizes & Offers</a>
         </div>
@@ -1016,69 +1016,7 @@
   </section> -->
   <!--Testimonials Section end-->
 
-  <!--FAQ Section start-->
-  <section class="faq pb-0 overflow-visible d-block position-relative z-1">
-    <div class="overlay bg-blue opacity-25 z-n1">
-    </div>
-    <div class="container">
-      <div>
-        <div class="row">
-          <div class="col-lg-12 px-4 mb-2">
-            <div class="faq-general">
-              <div class="section-title pb-3 text-center text-lg-start">
-                <p class="mb-1 pink">GENERAL QUESTIONS</p>
-                <h2 class="mb-2 text-white">FREQUENT ASKED <span class="pink">QUESTIONS!!</span></h2>
-                <p class="text-white">Here are some of the most common questions participants ask about our sweepstakes and giveaways.</p>
-              </div>
-              <div class="faq-accordion p-4 mb-5 bg-white rounded">
-                <div class="accordion accordion-faq" id="accordionFlushExample">
-                  <div class="accordion-item ">
-                    <p class="accordion-header p-4">
-                      <button class="accordion-button collapsed fw-semibold p-0" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        How do I enter a sweepstake?
-                      </button>
-                    </p>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse"
-                      data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body bg-lightgrey p-6">Simply select the offer you’re interested in, fill out the entry form, and confirm your participation. No hidden steps – it takes less than a minute.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <p class="accordion-header p-4">
-                      <button class="accordion-button collapsed  fw-semibold p-0" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                        aria-controls="flush-collapseTwo">
-                        Is participating in sweepstakes free?
-                      </button>
-                    </p>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                      data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body bg-lightgrey p-6">Yes! Most of our sweepstakes are completely free to enter. Some premium offers may have specific conditions, but all details are clearly mentioned.</div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <p class="accordion-header p-4">
-                      <button class="accordion-button collapsed fw-semibold p-0" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        How are winners selected?
-                      </button>
-                    </p>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse"
-                      data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body bg-lightgrey p-6">Winners are chosen randomly through a fair and transparent process. Every entry has an equal chance of winning.</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--FAQ Section end-->
+  
 
   <!--Direction Section start-->
   <!-- <section class="direction pb-0">
@@ -1190,6 +1128,70 @@
     </div>
   </section>
   <!--Blog Section end-->
+
+  <!--FAQ Section start-->
+  <section class="faq pb-0 overflow-visible d-block position-relative z-1">
+    <div class="overlay bg-blue opacity-25 z-n1">
+    </div>
+    <div class="container">
+      <div>
+        <div class="row">
+          <div class="col-lg-12 px-4 mb-2">
+            <div class="faq-general">
+              <div class="section-title pb-3 text-center text-lg-start">
+                <p class="mb-1 pink">GENERAL QUESTIONS</p>
+                <h2 class="mb-2 text-white">FREQUENT ASKED <span class="pink">QUESTIONS!!</span></h2>
+                <p class="text-white">Here are some of the most common questions participants ask about our sweepstakes and giveaways.</p>
+              </div>
+              <div class="faq-accordion p-4 mb-5 bg-white rounded">
+                <div class="accordion accordion-faq" id="accordionFlushExample">
+                  <div class="accordion-item ">
+                    <p class="accordion-header p-4">
+                      <button class="accordion-button collapsed fw-semibold p-0" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        How do I enter a sweepstake?
+                      </button>
+                    </p>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                      data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body bg-lightgrey p-6">Simply select the offer you’re interested in, fill out the entry form, and confirm your participation. No hidden steps – it takes less than a minute.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <p class="accordion-header p-4">
+                      <button class="accordion-button collapsed  fw-semibold p-0" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                        aria-controls="flush-collapseTwo">
+                        Is participating in sweepstakes free?
+                      </button>
+                    </p>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                      data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body bg-lightgrey p-6">Yes! Most of our sweepstakes are completely free to enter. Some premium offers may have specific conditions, but all details are clearly mentioned.</div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <p class="accordion-header p-4">
+                      <button class="accordion-button collapsed fw-semibold p-0" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        How are winners selected?
+                      </button>
+                    </p>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                      data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body bg-lightgrey p-6">Winners are chosen randomly through a fair and transparent process. Every entry has an equal chance of winning.</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--FAQ Section end-->
 
   <!--Subscribe Section start-->
   <section class="subscribe py-4">
