--- a/offerwall.html
+++ b/offerwall.html
@@ -232,32 +232,32 @@
 <!--Subscribe Section end-->
 
 <!--Footer Section start-->
-  <footer class="pt-9 text-center text-white position-relative z-1">
-    <div class="overlay z-n1 start-0"></div>
-    <div class="container">
-      <div class="footer-content row w-lg-100 m-auto border-bottom border-white border-opacity-25 mb-6">
+  <footer class=" text-center text-white bg-white position-relative z-1" >
+    
+    <div class="container pt-9 bg-white" style="padding: 0px 0px;" >
+      <div class="row w-lg-100 m-auto border-bottom border-dark border-opacity-25 mb-6">
         <div class="col-lg-6">
         <div class="footer-logo mb-8 pt-1">
-             <a href="./"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
+          <a href="./"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
         </div>
-        <p class=" mb-6">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
+        <p class=" mb-6 text-dark">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
         </div>
         <div class="col-lg-6">
         <div class="footer-disciption  m-auto mb-6">
           <div class="footer-socials pb-6">
             <ul class="m-0 p-0">
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
                   <i class="fa fa-instagram"></i>
                 </a>
               </li>
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
@@ -266,15 +266,15 @@
         </div>
         <div class="footer-menu pb-9">
           <ul class="p-0 m-0">
-            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small>Privacy Policy</small></a></li>
-            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small>Terms & Conditions</small></a></li>
-            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small>Unsubscribe</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small class="text-dark">Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small class="text-dark">Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small class="text-dark">Unsubscribe</small></a></li>
           </ul>
         </div>
       </div>
       </div>
       <div class="copyright pb-6 pt-1">
-        <small>Copyright &#169;2025 DealtoAir. All Rights Reserved Copyright</small>
+        <small class="text-dark">Copyright &#169;2025 DealtoAir. All Rights Reserved Copyright</small>
       </div>
     </div>
   </footer>
