--- a/prereg.html
+++ b/prereg.html
@@ -142,16 +142,16 @@
                 <div class="col-lg-6 col-md-6 p-0 ">
                   <div class="container-img-left mb-2">
                     <div class="img-left-1 float-end w-lg-80">
-                      <img class="mb-2 w-100 rounded" src="images/group/1.jpg" alt="group-image">
+                      <img class="mb-2 w-100 rounded" src="images/img_sec1-1.jpg" alt="group-image">
                     </div>
                     <div class="img-left-2">
-                      <img src="images/group/2.jpg" alt="group-image" class="w-100 rounded">
+                      <img src="images/img_sec1-2.jpg" alt="group-image" class="w-100 rounded">
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="container-img-right w-lg-75">
-                    <img src="images/group/3.jpg" alt="group-image" class="w-100 rounded">
+                    <img src="images/img_sec1-3.jpg" alt="group-image" class="w-100 rounded">
                   </div>
                 </div>
               </div>
@@ -160,31 +160,30 @@
           <div class="col-lg-6  align-self-center px-4">
             <div class="faq-form bg-white rounded shadow-lg p-6 mb-mi">
               <div class="form-title mb-4">
-                <p class="mb-1 pink">TICKET BOOK</p>
-                <h2 class="mb-2">LET'S RESERVE A <span class="pink">SEAT</span></h2>
-                <p class="m-0">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                  anim id est laborum.</p>
+                <p class="mb-1 pink">EXCLUSIVE SWEEPSTAKE</p>
+                <h3 class="mb-2">CLAIM<span class="pink"> YOUR CHANCE</span> TODAY!</h3>
+                <p class="m-0">Enter our exciting offer and grab amazing rewards.
+Submit your details now and you could be the next lucky winner!</p>
               </div>
               <div class="form-content justify-content-between">
                 <form action="coreg.html">
                   <input type="text" placeholder="Full Name" class="mb-5">
                   <div class=" row justify-content-around">
                     <div class="col-lg-6 col-md-6">
-                      <div class="phone-no">
-                        <input type="tel" placeholder="Phone No." class="mb-5">
+                      <div class="zip">
+                        <input type="tel" placeholder="zip" class="mb-5">
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                      <div class="emai">
+                      <div class="email">
                         <input type="email" placeholder="Email Address" class="mb-5" required>
                       </div>
                     </div>
                   </div>
-                  <textarea placeholder="How may we help you?" rows="4" class="mb-5"></textarea>
+                  <textarea placeholder="Address" rows="4" class="mb-5" required></textarea>
                   <button class="btn mb-5" id="sub-btn">SEND MESSAGE</button>
                 </form>
-                <small>*Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero hic facere, minima impedit ea
-                  quasi nemo odio.</small>
+                <small>*By submitting this form, you authorize DealtoAir to collect and process the information you provide. We may use your details to contact you with offers, updates, and other relevant communications. Please note that your data will be handled in accordance with our strict <a href="privacy.html" class="text-blue"><b>Privacy Policy</b></a>. By proceeding, you confirm that you have read and agree to DealtoAir’s <a href="terms.html" class="text-blue"><b>Terms & Conditions</b></a>.</small>
               </div>
             </div>
           </div>
