--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>DealtoAir</title>
+  <link rel="icon" type="image/x-icon" href="images/logo/Favicon_Dealtoair.jpg">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -118,14 +119,10 @@
                 </ul>
               </div>
             </div> -->
-            <!-- <div class="col-lg-3">
-              <div class="menu-search">
-                <a href="#search1" class="mt_search">
-                  <i class="fa fa-search fa-lg me-5 text-white"></i>
-                </a>
-                <a class="btn btn3"  href="book-now.html">Buy Ticket<i class="fa fa-long-arrow-right ms-4"></i></a>
-              </div>
-            </div> -->
+            <div class="col-lg-4"></div>
+            <div class="col-lg-6">
+              <h4 class="text-pink pt-5" style="color: #E91E63;">Unlock world of sweepstakes <span class="text-blue">For USA</span> </h4>
+            </div>
             <div id="slicknav-mobile"></div>
           </div>
         </nav>
@@ -196,7 +193,7 @@
                     <i class="fa  fa-calendar-o pe-1"></i> 30-31 DEC, 2025
                   </li>
                   <li class="ps-2">
-                    <i class="fa  fa-map-marker pe-1"></i>  Open Worldwide 🌍
+                    <i class="fa  fa-map-marker pe-1"></i>  Specific to USA <i class="fa fa-flag pe-1"></i>
                   </li>
                 </ul>
               </div>
@@ -243,14 +240,14 @@
                 <p class="mb-2">We are dedicated to transparency, security, and delivering only the most genuine offers. With thousands of happy participants and winners every month, Dealtoair continues to be a go-to destination for sweepstake lovers worldwide.</p>
               </div>
               <div class="overview-event-info pb-6 g-4 text-start position-absolute">
-                <div class="row justify-content-around ">
-                  <div class="col-lg-6 col-md-6">
+                <div class="row justify-content-around " style="cursor: default;">
+                  <div class="col-lg-6 col-md-6" >
                     <a>
                       <div class="event-info-box align-items-center d-flex p-4 rounded bg-white box-shadow my-2">
-                        <div class="event-info-icon text-center ">
+                        <div class="event-info-icon text-center " style="cursor: default;">
                           <i class="fa fa-map-marker  text-white bg-pink rounded-circle me-3"></i>
                         </div>
-                        <div class="location-info">
+                        <div class="location-info" style="cursor: default;">
                           <h5 class="mb-1">WHERE</h5>
                           <small>Global Reach, Local Fun <br> headquarters based in the <b>USA</b></small>
                         </div>
@@ -260,10 +257,10 @@
                   <div class="col-lg-6 col-md-6">
                     <a>
                       <div class="event-info-box align-items-center d-flex p-4 rounded bg-white box-shadow my-2">
-                        <div class="event-info-icon text-center">
+                        <div class="event-info-icon text-center" style="cursor: default;">
                           <i class="fa fa-calendar-o  text-white bg-pink rounded-circle me-3"></i>
                         </div>
-                        <div class="time-info">
+                        <div class="time-info" style="cursor: default;">
                           <h5 class="mb-1">WHEN</h5>
                           <small>Daily & Seasonal Sweepstakes<br> every week, every month</small>
                         </div>
@@ -401,7 +398,7 @@
               </div>
               <div class="col-lg-3 col-md-3 p-2">
                 <div class="p-2">
-                  <h1 class="text-white m-0"><span class="num" data-val="95"></span><span>%</span></h1>
+                  <h1 class="text-white m-0"><span class="num" data-val="98"></span><span>%</span></h1>
                   <p class="mb-0">User Satisfaction</p>
                 </div>
               </div>
@@ -413,10 +410,10 @@
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded text bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-podcast text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info ">
+                  <div class="feature-box-info " style="cursor: default;">
                     <h5 class="text-white mb-2">LIVE SWEEPSTAKES</h5>
                     <small>Enter sweepstakes in real-time and experience the thrill of live prize announcements.</small>
                   </div>
@@ -426,10 +423,10 @@
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded  bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-check text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">TRANSPARENT PROCESS</h5>
                     <small>Every entry and draw is 100% fair, with clear terms and verified results.</small>
                   </div>
@@ -439,10 +436,10 @@
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-gift text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">EXCITING GIVEAWAYS</h5>
                     <small>Win daily rewards, gift cards, gadgets, and luxury prizes tailored for you.</small>
                   </div>
@@ -452,10 +449,10 @@
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-lock text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">SECURE & TRUSTED</h5>
                     <small>Your data and entries are protected with top-level security and transparency.</small>
                   </div>
@@ -465,10 +462,10 @@
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-globe text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">GLOBAL PARTICIPATION</h5>
                     <small>Join from anywhere in the world and access sweepstakes across multiple categories.</small>
                   </div>
@@ -478,10 +475,10 @@
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-desktop text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">DEDICATED SUPPORT</h5>
                     <small>Get 24/7 customer support for all your sweepstake queries and prize claims.</small>
                   </div>
@@ -1231,40 +1228,49 @@
     
     <div class="container pt-9 bg-white" style="padding: 0px 0px;" >
       <div class="row w-lg-100 m-auto border-bottom border-dark border-opacity-25 mb-6">
-        <div class="col-lg-6">
+        <div class="col-lg-7">
         <div class="footer-logo mb-8 pt-1">
           <a href="./"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
         </div>
         <p class=" mb-6 text-dark">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-3"><div class="footer-menu pb-9">
+          <ul class="p-0 m-0">
+            <li class=" m-3" style="list-style: none; color: black;"><b>Useful Links</b></li>
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small class="text-dark">Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small class="text-dark">Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small class="text-dark">Unsubscribe</small></a></li>
+          </ul>
+        </div></div> -->
+        <div class="col-lg-5">
+        <div class="footer-menu pb-9">
+          <ul class="p-0 m-0">
+            <li class=" m-3" style="list-style: none; color: black;"><b>Useful Links</b></li>
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small class="text-dark">Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small class="text-dark">Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small class="text-dark">Unsubscribe</small></a></li>
+          </ul>
+        </div>
         <div class="footer-disciption  m-auto mb-6">
           <div class="footer-socials pb-6">
             <ul class="m-0 p-0">
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25" href="https://www.linkedin.com/company/dealtoair/">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25" href="https://www.linkedin.com/company/dealtoair/">
                   <i class="fa fa-instagram"></i>
                 </a>
               </li>
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25" href="https://www.linkedin.com/company/dealtoair/">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
             </ul>
           </div>
-        </div>
-        <div class="footer-menu pb-9">
-          <ul class="p-0 m-0">
-            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small class="text-dark">Privacy Policy</small></a></li>
-            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small class="text-dark">Terms & Conditions</small></a></li>
-            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small class="text-dark">Unsubscribe</small></a></li>
-          </ul>
         </div>
       </div>
       </div>
