--- a/news-list.html
+++ b/news-list.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Archives-Eventen</title>
+  <title>Archives | DealtoAir</title>
+  <link rel="icon" type="image/x-icon" href="images/logo/Favicon_Dealtoair.jpg">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -415,40 +416,49 @@
     
     <div class="container pt-9 bg-white" style="padding: 0px 0px;" >
       <div class="row w-lg-100 m-auto border-bottom border-dark border-opacity-25 mb-6">
-        <div class="col-lg-6">
+        <div class="col-lg-7">
         <div class="footer-logo mb-8 pt-1">
           <a href="./"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
         </div>
         <p class=" mb-6 text-dark">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-3"><div class="footer-menu pb-9">
+          <ul class="p-0 m-0">
+            <li class=" m-3" style="list-style: none; color: black;"><b>Useful Links</b></li>
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small class="text-dark">Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small class="text-dark">Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small class="text-dark">Unsubscribe</small></a></li>
+          </ul>
+        </div></div> -->
+        <div class="col-lg-5">
+        <div class="footer-menu pb-9">
+          <ul class="p-0 m-0">
+            <li class=" m-3" style="list-style: none; color: black;"><b>Useful Links</b></li>
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small class="text-dark">Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small class="text-dark">Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small class="text-dark">Unsubscribe</small></a></li>
+          </ul>
+        </div>
         <div class="footer-disciption  m-auto mb-6">
           <div class="footer-socials pb-6">
             <ul class="m-0 p-0">
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25" href="https://www.linkedin.com/company/dealtoair/">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25" href="https://www.linkedin.com/company/dealtoair/">
                   <i class="fa fa-instagram"></i>
                 </a>
               </li>
               <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25">
+                <a class="d-inline-block rounded-circle bg-dark  bg-opacity-25" href="https://www.linkedin.com/company/dealtoair/">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
             </ul>
           </div>
-        </div>
-        <div class="footer-menu pb-9">
-          <ul class="p-0 m-0">
-            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small class="text-dark">Privacy Policy</small></a></li>
-            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small class="text-dark">Terms & Conditions</small></a></li>
-            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small class="text-dark">Unsubscribe</small></a></li>
-          </ul>
         </div>
       </div>
       </div>
