--- a/prereg.html
+++ b/prereg.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Pre-Registration | DealToAir</title>
+  <link rel="icon" type="image/x-icon" href="images/logo/Favicon_Dealtoair.jpg">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -142,16 +143,16 @@
                 <div class="col-lg-6 col-md-6 p-0 ">
                   <div class="container-img-left mb-2">
                     <div class="img-left-1 float-end w-lg-80">
-                      <img class="mb-2 w-100 rounded" src="images/img_sec1-1.jpg" alt="group-image">
+                      <img class="mb-2 w-100 rounded" src="images/prereg_1.jpg" alt="group-image">
                     </div>
                     <div class="img-left-2">
-                      <img src="images/img_sec1-2.jpg" alt="group-image" class="w-100 rounded">
+                      <img src="images/prereg_2.jpg" alt="group-image" class="w-100 rounded">
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="container-img-right w-lg-75">
-                    <img src="images/img_sec1-3.jpg" alt="group-image" class="w-100 rounded">
+                    <img src="images/prereg_3.jpg" alt="group-image" class="w-100 rounded">
                   </div>
                 </div>
               </div>
@@ -189,10 +190,10 @@ Submit your details now and you could be the next lucky winner!</p>
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-gift text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">EXCITING GIVEAWAYS</h5>
                     <small class="text-white">Win daily rewards, gift cards, gadgets, and luxury prizes tailored for you.</small>
                   </div>
@@ -202,10 +203,10 @@ Submit your details now and you could be the next lucky winner!</p>
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-lock text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">SECURE & TRUSTED</h5>
                     <small class="text-white">Your data and entries are protected with top-level security and transparency.</small>
                   </div>
@@ -215,10 +216,10 @@ Submit your details now and you could be the next lucky winner!</p>
             <div class="col-lg-4 col-md-6">
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
-                  <div class="feature-box-icon mb-4">
+                  <div class="feature-box-icon mb-4" style="cursor: default;">
                     <i class="fa fa-globe text-white bg-pink rounded-circle text-center"></i>
                   </div>
-                  <div class="feature-box-info">
+                  <div class="feature-box-info" style="cursor: default;">
                     <h5 class="text-white mb-2">GLOBAL PARTICIPATION</h5>
                     <small class="text-white">Join from anywhere in the world and access sweepstakes across multiple categories.</small>
                   </div>
