--- a/coreg.html
+++ b/coreg.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Co-Registration | DealtoAir</title>
+  <link rel="icon" type="image/x-icon" href="images/logo/Favicon_Dealtoair.jpg">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
